# VectorDB

./: .env  .gitignore  Dockerfile  Readme.md  main.html  pyproject.toml
app/: main.py  models.py
app/db/: __init__.py  config.py  vector_db.py
app/routes/: ingestion.py  retrieval.py
app/utils/: embeddings.py
